cleaner solution: extend BaseExceptionFilter
